--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ local.properties
 .loadpath
 .recommenders
 
+# ignore properties file
+pom.properties
+
 # External tool builders
 .externalToolBuilders/
 
